// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RegularBrn - medium 1`] = `
<DocumentFragment>
  <button
    aria-label="Some medium btn"
    class="bg-green-700 text-xl h-10 font-semibold text-white rounded grow"
    type="button"
  >
    Some medium btn
  </button>
</DocumentFragment>
`;

exports[`RegularBrn 1`] = `
<DocumentFragment>
  <button
    aria-label="Some btn"
    class="bg-green-700 text-3xl h-16  font-semibold text-white rounded grow"
    type="button"
  >
    Some btn
  </button>
</DocumentFragment>
`;
